--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
 
+
+  <link rel="shortcut icon" id="faicon" href="ico.ico">
   <title>S.I.M Soluções</title>
 </head>
 
@@ -16,5 +18,6 @@
   <div id="root"></div>
 
 </body>
+<script type="text/javascript" src="tabAnimator.js"></script>
 
 </html>
